  the build process. It is disabled by default in order to use the standard
  system library (and eventually to improve speed).
- Fixed the bugs #1852883 and #1890660 (VBOs had an erratic behaviour on some
  Mac OS X platforms and Intel X3100 gfx cards under Linux).
- Removed the workaround for bug #1852883

* Edward Cullen:

- Provided an RPM spec file for QuesoGLC

Changes made from the "0.6.5" release to the "0.7.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Added a workaround for bug #1852883 : VBOs are disabled on Mac OSX platforms
- Fixed a bug in the measurement routines which caused the advance vector of
  strings to be wrongly computed.
- Simplified a bit the GL state management (enabling of GL_TEXTURE_2D should now
  be done by the user when the rendering style is GLC_TEXTURE)
- Updated GLEW source code to release 1.5.0
- glcGetFontMap() and glcGetMasterMap() now return GLC_NONE if the font/master
  does not map 'inCode'.
- Updated test7 in order not to report an error when testing fonts that defines
  a space character with no width.
- glcGenFontID() now creates an empty font in order to reserve the ID for a
  future use. The new ID can be freed by deleting it with glcDeleteFont().
- Measurement datas of glyphes are now cached in order to accelerate the
  measurement commands when GLC_GL_OBJECTS is enabled.
- Fonts which belong to the same family are now grouped in the same master.
- Added project files for Microsoft Visual C++ 2005
- Fixed bug #1856336 (glcFontFace reports GLC_RESOURCE_ERROR on Windows when
  selecting the "Arial Regular" font face).
- Removed explicit calls to glGetString(GL_VERSION) and
  glGetString(GL_EXTENSIONS) in glcContext() since GLEW already takes care of
  that.
- Fixed bug #1843710 (Code to handle missing FTC_Manager_* is broken).
- GLC_LINE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
  supports them