@@ -1,8 +1,13 @@
 Thanks to :
 
-* Pablo Barbáchano for fixing the install process and providing a patch to allow QuesoGLC to be linked with FreeType 2.2.x
+* Pablo Barbáchano for fixing the install process and providing a patch to allow
+  QuesoGLC to be linked with FreeType 2.2.x
 * Brandon Casey for many bug fixes
-* Thomas Zimmermann for fixing the string measurement commands and improving the autotools building scripts
-* Matt Turner for demonstrating that QuesoGLC could be compiled under Windows with a few changes
-* Giel van Schijndel and Dennis Schridde for providing the pkg-config files and reporting many bugs
+* Thomas Zimmermann for fixing the string measurement commands and improving the
+  autotools building scripts
+* Matt Turner for demonstrating that QuesoGLC could be compiled under Windows
+  with a few changes
+* Giel van Schijndel and Dennis Schridde for providing the pkg-config files and
+  reporting many bugs
 * Edward Cullen for providing an RPM spec file for QuesoGLC
+* Paulo Meira for providing a new rendering style GLC_PIXMAP_QSO
